--- a/hooks/localization-ja-hook/docroot/WEB-INF/src/content/Language_ja.properties
+++ b/hooks/localization-ja-hook/docroot/WEB-INF/src/content/Language_ja.properties
@@ -1,5 +1,6 @@
 city=市区町村
 region=都道府県
+regular-expression-help=これはユーザーのパスワードの有効パターンを定義します。詳しくは正規表現{0}に関して{1}を参考にしてください。
 street-1-and-city-are-required-fields.-postal-code-could-be-required-in-some-countries=都道府県および市区町村は入力必須項目です。 国によっては、郵便番号が必ず必要です。
 street1=番地
 street2=ビル名
